--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Horiseon</title>
+        <title>Horiseon-Social Solution Services</title>
     </head>
     <body>
         <!--Navigation-->
@@ -32,7 +32,7 @@
     <div class="content">
         <!--Search Engine Optimization section-->
         <div id="search-engine-optimization" class="search-engine-optimization" >
-            <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notepad with the letters S.E.O. written on it" class="float-left">
             <h2> Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -40,7 +40,7 @@
         </div>
         <!--Online Reputation Management section-->
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="person on their laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -48,7 +48,7 @@
         </div>
         <!--Social Media Marketing section-->
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="group of people collaberating at a table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -59,7 +59,7 @@
     <section class="benefits">
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="half of a gear with and an arrow leading doen to a dollar sign."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -67,7 +67,7 @@
         <div class="benefit">
         <!--Brand Awarnesss section-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="figure of a person with a lightbulb as their head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -75,7 +75,7 @@
         <div class="benefit">
         <!--Cost Mangement section-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="a gear with 3 coins placed in front of it." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
